# navi-lazytest

./: .gitignore  LICENSE  README.md  __init__.py  evaluator.py  generators.py  mutators.py  observers.py  optimizer.py  orchestrator.py  pyproject.toml  query_suite.py  run_spiral.py
adapters/: __init__.py  triple_store.py
examples/: __init__.py
examples/adapters/: __init__.py  template_adapter.py
